--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-# Copyright (C) 2002, 2003, 2004, 2005, 2006 Simon Josefsson.
+# Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007 Simon Josefsson.
 #
 # This file is part of GNU SASL Library.
 #
@@ -19,7 +19,9 @@ dnl Process this file with autoconf to produce a configure script.
 # Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 # MA 02110-1301, USA.
 
+AC_PREREQ(2.61)
 AC_INIT([libgsasl], [0.3.0], [bug-gsasl@gnu.org])
+AC_CONFIG_AUX_DIR([build-aux])
 
 # Library code modified:                              REVISION++
 # Interfaces changed/added/removed:   CURRENT++       REVISION=0
@@ -29,13 +31,12 @@ AC_SUBST(LT_CURRENT, 10)
 AC_SUBST(LT_REVISION, 1)
 AC_SUBST(LT_AGE, 3)
 
-AC_PREREQ(2.59)
-AM_INIT_AUTOMAKE([1.9 gnits])
+AM_INIT_AUTOMAKE([1.10 gnits])
 AC_CONFIG_HEADERS(config.h)
 
 # Checks for programs.
 AM_GNU_GETTEXT(external)
-AM_GNU_GETTEXT_VERSION(0.14.1)
+AM_GNU_GETTEXT_VERSION(0.16.1)
 AC_PROG_CC
 gl_EARLY
 AC_LIBTOOL_WIN32_DLL
