--- a/gl/.cvsignore
+++ b/gl/.cvsignore
@@ -21,3 +21,9 @@ c-strncasecmp.c
 striconv.c
 striconv.h
 stdint.h
+iconv_.h
+iconv_open-aix.gperf
+iconv_open-hpux.gperf
+iconv_open-irix.gperf
+iconv_open-osf.gperf
+iconv_open.c
