*** empty log message ***

--- a/gl/.cvsignore
+++ b/gl/.cvsignore
@@ -12,18 +12,8 @@ stdlib.h
 string.h
 unistd.h
 float+.h
-stdint_.h
-c-ctype.c
-c-ctype.h
-c-strcase.h
-c-strcasecmp.c
-c-strncasecmp.c
-striconv.c
-striconv.h
 stdint.h
-iconv_.h
-iconv_open-aix.gperf
-iconv_open-hpux.gperf
-iconv_open-irix.gperf
-iconv_open-osf.gperf
-iconv_open.c
+iconv_open-aix.h
+iconv_open-hpux.h
+iconv_open-irix.h
+iconv_open-osf.h
