Fix update-po rule.

--- a/Makefile.am
+++ b/Makefile.am
@@ -25,8 +25,7 @@ DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --disable-obsolete
 # Maintainer targets
 
 update-po: refresh-po
-	git-update-index --add `ls po/*.po | grep -v quot.po` || true && \
-	git-commit -m "Sync with TP." po/LINGUAS `ls po/*.po | grep -v quot.po`
+	cg-commit -m "Sync with TP." po/LINGUAS `ls po/*.po | grep -v quot.po`
 	$(MAKE) -C lib update-po
 
 ChangeLog:
