--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -75,8 +75,7 @@ SUBDIRS += src
 # Maintainer targets
 
 update-po: refresh-po
-	git-update-index --add `ls po/*.po | grep -v quot.po` || true && \
-	git-commit -m "Sync with TP." po/LINGUAS `ls po/*.po | grep -v quot.po`
+	cg-commit -m "Sync with TP." po/LINGUAS `ls po/*.po | grep -v quot.po`
 
 ChangeLog:
 	git log --pretty --numstat --summary | git2cl > ChangeLog
