--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -75,6 +75,7 @@ SUBDIRS += src
 # Maintainer targets
 
 update-po: refresh-po
+	cg-add `ls po/*.po | grep -v quot.po`
 	cg-commit -m "Sync with TP." po/LINGUAS `ls po/*.po | grep -v quot.po`
 
 ChangeLog:
