--- a/configure.ac
+++ b/configure.ac
@@ -21,7 +21,7 @@ AC_PREREQ(2.61)
 AC_INIT([gsasl], [0.2.22], [bug-gsasl@gnu.org])
 AC_CONFIG_AUX_DIR([build-aux])
 
-AM_INIT_AUTOMAKE([1.10 gnits])
+AM_INIT_AUTOMAKE([1.10])
 AC_CONFIG_HEADERS(config.h)
 AB_INIT
 
