--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -31,7 +31,7 @@ AC_SUBST(LT_CURRENT, 11)
 AC_SUBST(LT_REVISION, 2)
 AC_SUBST(LT_AGE, 4)
 
-AM_INIT_AUTOMAKE([1.10 gnits])
+AM_INIT_AUTOMAKE([1.10])
 AC_CONFIG_HEADERS(config.h)
 
 # Checks for programs.
