--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -35,12 +35,14 @@ AM_INIT_AUTOMAKE([1.10])
 AC_CONFIG_HEADERS(config.h)
 
 # Checks for programs.
-AM_GNU_GETTEXT(external)
-AM_GNU_GETTEXT_VERSION(0.16.1)
 AC_PROG_CC
 gl_EARLY
 AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
+
+# Internationalization.
+AM_GNU_GETTEXT(external)
+AM_GNU_GETTEXT_VERSION(0.17)
 
 # ANONYMOUS
 AC_ARG_ENABLE(anonymous,
