--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -89,6 +89,8 @@ release:
 	$(MAKE) ChangeLog distcheck
 	git commit -m Generated. ChangeLog
 	gnupload --to alpha.gnu.org:gsasl $(distdir).tar.gz
-	cp -v $(distdir).tar.gz{,.sig} $(htmldir)/releases/
-	cd $(htmldir) && cvs add -kb releases/$(distdir).tar.gz{,.sig} && \
+	cp -v $(distdir).tar.gz $(distdir).tar.gz.sig $(htmldir)/releases/
+	cd $(htmldir) && \
+		cvs add -kb releases/$(distdir).tar.gz \
+			releases/$(distdir).tar.gz.sig && \
 		cvs commit -m "Update." releases/
