Fix .cvscopying filename.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -76,7 +76,7 @@ SUBDIRS += src
 
 ChangeLog:
 	git log --pretty --numstat --summary | git2cl > ChangeLog
-	cat ../.cvscopying >> ChangeLog
+	cat ../.clcopying >> ChangeLog
 
 htmldir = ../../www-gsasl
 
